[gd_scene load_steps=47 format=3 uid="uid://71iyctxttt1i"]

[ext_resource type="FontFile" uid="uid://cvr1pntrac57v" path="res://Assets/DeliciousHandrawn-Regular.ttf" id="1_okp7g"]
[ext_resource type="Script" path="res://UI.gd" id="1_t8ps7"]
[ext_resource type="Texture2D" uid="uid://ds2cbo5q8v83i" path="res://Assets/MPO!_Background.png" id="2_jg5lu"]
[ext_resource type="Script" path="res://slot.gd" id="2_pktdi"]
[ext_resource type="PackedScene" uid="uid://rpumhyxptprg" path="res://item.tscn" id="3_sauvc"]
[ext_resource type="Texture2D" uid="uid://drbhvf6ms0ijq" path="res://Assets/Items/JuniperBerries.png" id="5_a7po6"]
[ext_resource type="Texture2D" uid="uid://bfg7u2biev2ha" path="res://Assets/Items/Thistle.png" id="5_xkbwm"]
[ext_resource type="Texture2D" uid="uid://bbadlxbm46job" path="res://Assets/Items/Nightshade.png" id="6_1tqn1"]
[ext_resource type="AudioStream" uid="uid://dmatxscx8kjey" path="res://Assets/Audio/drop_1.wav" id="6_7tmxo"]
[ext_resource type="Texture2D" uid="uid://cx5ss7aj0xae1" path="res://Assets/Items/Lavender.png" id="7_lq6uc"]
[ext_resource type="Texture2D" uid="uid://d3ptmbpdesg13" path="res://Assets/Items/Marigold.png" id="8_26ia2"]
[ext_resource type="Script" path="res://requests.gd" id="9_68357"]
[ext_resource type="Texture2D" uid="uid://cpdndksr15m25" path="res://Assets/Items/Taproot.png" id="10_dw8en"]
[ext_resource type="PackedScene" uid="uid://dex4sdxwtrrm5" path="res://ticket.tscn" id="10_np0i0"]
[ext_resource type="Texture2D" uid="uid://bylt5m3jyxydv" path="res://Assets/Items/Cinnamon.png" id="11_xvppc"]
[ext_resource type="Texture2D" uid="uid://bfjec41dfspvv" path="res://Assets/Items/BrownMushroom.png" id="12_42w0p"]
[ext_resource type="Texture2D" uid="uid://cx0rd2nc17i0x" path="res://Assets/Items/RedMushroom.png" id="13_ism3j"]
[ext_resource type="Texture2D" uid="uid://cwojypd3m5mks" path="res://Assets/Items/Nirnroot.png" id="14_6pt30"]
[ext_resource type="Texture2D" uid="uid://bmjuff4scs23k" path="res://Assets/Items/FireSalt.png" id="15_onyiw"]
[ext_resource type="Texture2D" uid="uid://q40pl17g77tj" path="res://Assets/Items/ChaurusEgg.png" id="16_6p8qr"]
[ext_resource type="Texture2D" uid="uid://codmhtbqwjl4" path="res://Assets/Items/IceWraithTeeth.png" id="17_g4o5r"]
[ext_resource type="Texture2D" uid="uid://drjchvhbdhld8" path="res://Assets/Items/LizardTail.png" id="18_5d0gs"]
[ext_resource type="Texture2D" uid="uid://cygdrobxpflnk" path="res://Assets/Items/Eyeball.png" id="19_3k45i"]
[ext_resource type="Script" path="res://book.gd" id="19_iuyn2"]
[ext_resource type="Texture2D" uid="uid://br3rjj4nps564" path="res://Assets/Items/FairyDust.png" id="20_5o6mr"]
[ext_resource type="Texture2D" uid="uid://bho7keaaia41m" path="res://icon.svg" id="25_pj2av"]
[ext_resource type="Texture2D" uid="uid://ccc12hu4pdy5k" path="res://Assets/BookAlhemy.png" id="25_usec6"]
[ext_resource type="Texture2D" uid="uid://dlcjk7exy68hi" path="res://Assets/BookOpen.png" id="26_qvk34"]
[ext_resource type="Texture2D" uid="uid://crfsaq7jvpsvn" path="res://Assets/LeftArrow.png" id="27_d562i"]
[ext_resource type="AudioStream" uid="uid://d0i1giev5deoa" path="res://Assets/Audio/249305-Goblin_Gibberish_1.wav" id="27_q3sy3"]
[ext_resource type="Texture2D" uid="uid://cumnuqe66wf" path="res://Assets/RightArrow.png" id="28_vy4jb"]
[ext_resource type="Texture2D" uid="uid://cfn0rv13efn8q" path="res://Assets/Explosion.png" id="30_3k566"]
[ext_resource type="Script" path="res://fail_box.gd" id="31_nik3j"]
[ext_resource type="AudioStream" uid="uid://ddn21yflwpffc" path="res://Assets/Audio/page_turn_2.wav" id="31_o3iil"]
[ext_resource type="AudioStream" uid="uid://c88667uj6l77h" path="res://Assets/Audio/fart_2.wav" id="32_1s3eg"]
[ext_resource type="AudioStream" uid="uid://58fnmmaojgmc" path="res://Assets/Audio/Music/GameMusciMPO.mp3" id="32_gqr26"]
[ext_resource type="AudioStream" uid="uid://crfvawbsvwpld" path="res://Assets/Audio/splode_3.wav" id="33_btie6"]
[ext_resource type="AudioStream" uid="uid://b35mmmfyord6n" path="res://Assets/Audio/cauldron.mp3" id="34_s0hle"]
[ext_resource type="AudioStream" uid="uid://dn6aeboxm328u" path="res://Assets/Audio/yippee.wav" id="36_tfe8d"]
[ext_resource type="AudioStream" uid="uid://c8ca3ndrvig6u" path="res://Assets/Audio/pickup_4.wav" id="38_4uuq6"]

[sub_resource type="Theme" id="Theme_ttcmm"]
default_font = ExtResource("1_okp7g")

[sub_resource type="Theme" id="Theme_61pr8"]
default_font = ExtResource("1_okp7g")

[sub_resource type="Theme" id="Theme_632kg"]
default_font = ExtResource("1_okp7g")
default_font_size = 30

[sub_resource type="Theme" id="Theme_x7d70"]
default_font = ExtResource("1_okp7g")
default_font_size = 25

[sub_resource type="Theme" id="Theme_6mfrb"]
default_font = ExtResource("1_okp7g")

[sub_resource type="Theme" id="Theme_5t6d1"]
default_font = ExtResource("1_okp7g")

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ttcmm")
script = ExtResource("1_t8ps7")

[node name="Background" type="TextureRect" parent="."]
z_index = -4096
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jg5lu")
expand_mode = 1

[node name="Cauldron" type="Container" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.393229
anchor_top = 0.41358
anchor_right = 0.613229
anchor_bottom = 0.669753
offset_right = -109.44
scale = Vector2(1.76, 1)
script = ExtResource("2_pktdi")
metadata/_edit_use_anchors_ = true

[node name="SuccessSound" type="AudioStreamPlayer" parent="Cauldron"]
stream = ExtResource("36_tfe8d")
volume_db = -2.0
playback_type = 1

[node name="DropSound" type="AudioStreamPlayer" parent="Cauldron"]
stream = ExtResource("6_7tmxo")
volume_db = 3.0
playback_type = 1

[node name="JuniperBerries" parent="." instance=ExtResource("3_sauvc")]
layout_mode = 1
anchor_left = 0.104167
anchor_top = 0.263889
anchor_right = 0.170139
anchor_bottom = 0.316358
texture = ExtResource("5_a7po6")
id = 4

[node name="PickupSound" type="AudioStreamPlayer" parent="JuniperBerries"]
stream = ExtResource("38_4uuq6")
playback_type = 1

[node name="Thistle" parent="." instance=ExtResource("3_sauvc")]
layout_mode = 1
anchor_left = 0.0277778
anchor_top = 0.334877
anchor_right = 0.0598958
anchor_bottom = 0.402779
offset_bottom = -1.52588e-05
texture = ExtResource("5_xkbwm")

[node name="PickupSound" type="AudioStreamPlayer" parent="Thistle"]
stream = ExtResource("38_4uuq6")
playback_type = 1

[node name="Nightshade" parent="." instance=ExtResource("3_sauvc")]
layout_mode = 1
anchor_left = 0.116319
anchor_top = 0.327161
anchor_right = 0.161458
anchor_bottom = 0.399691
texture = ExtResource("6_1tqn1")
id = 1

[node name="PickupSound" type="AudioStreamPlayer" parent="Nightshade"]
stream = ExtResource("38_4uuq6")
playback_type = 1

[node name="Lavender" parent="." instance=ExtResource("3_sauvc")]
layout_mode = 1
anchor_left = 0.0373264
anchor_top = 0.42284
anchor_right = 0.105903
anchor_bottom = 0.469136
offset_top = -3.05176e-05
texture = ExtResource("7_lq6uc")
id = 2

[node name="PickupSound" type="AudioStreamPlayer" parent="Lavender"]
stream = ExtResource("38_4uuq6")
playback_type = 1

[node name="Marigold" parent="." instance=ExtResource("3_sauvc")]
layout_mode = 1
anchor_left = 0.194444
anchor_top = 0.404321
anchor_right = 0.237847
anchor_bottom = 0.464506
texture = ExtResource("8_26ia2")
id = 3

[node name="PickupSound" type="AudioStreamPlayer" parent="Marigold"]
stream = ExtResource("38_4uuq6")
playback_type = 1

[node name="Taproot" parent="." instance=ExtResource("3_sauvc")]
layout_mode = 1
anchor_left = 0.271701
anchor_top = 0.12037
anchor_right = 0.329861
anchor_bottom = 0.220679
texture = ExtResource("10_dw8en")
id = 5

[node name="PickupSound" type="AudioStreamPlayer" parent="Taproot"]
stream = ExtResource("38_4uuq6")
playback_type = 1

[node name="Cinnamon" parent="." instance=ExtResource("3_sauvc")]
layout_mode = 1
anchor_left = 0.574653
anchor_top = 0.0848765
anchor_right = 0.59809
anchor_bottom = 0.194444
texture = ExtResource("11_xvppc")
id = 6

[node name="PickupSound" type="AudioStreamPlayer" parent="Cinnamon"]
stream = ExtResource("38_4uuq6")
playback_type = 1

[node name="BrownMushroom" parent="." instance=ExtResource("3_sauvc")]
layout_mode = 1
anchor_left = 0.338542
anchor_top = 0.131173
anchor_right = 0.389757
anchor_bottom = 0.20679
texture = ExtResource("12_42w0p")
id = 7

[node name="PickupSound" type="AudioStreamPlayer" parent="BrownMushroom"]
stream = ExtResource("38_4uuq6")
playback_type = 1

[node name="RedMushroom" parent="." instance=ExtResource("3_sauvc")]
layout_mode = 1
anchor_left = 0.62066
anchor_top = 0.123457
anchor_right = 0.678819
anchor_bottom = 0.205247
texture = ExtResource("13_ism3j")
id = 8

[node name="PickupSound" type="AudioStreamPlayer" parent="RedMushroom"]
stream = ExtResource("38_4uuq6")
playback_type = 1

[node name="Nirnroot" parent="." instance=ExtResource("3_sauvc")]
layout_mode = 1
anchor_left = 0.6875
anchor_top = 0.137346
anchor_right = 0.744792
anchor_bottom = 0.236111
texture = ExtResource("14_6pt30")
id = 9

[node name="PickupSound" type="AudioStreamPlayer" parent="Nirnroot"]
stream = ExtResource("38_4uuq6")
playback_type = 1

[node name="FireSalt" parent="." instance=ExtResource("3_sauvc")]
layout_mode = 1
anchor_left = 0.402778
anchor_top = 0.154321
anchor_right = 0.458333
anchor_bottom = 0.208333
texture = ExtResource("15_onyiw")
id = 10

[node name="PickupSound" type="AudioStreamPlayer" parent="FireSalt"]
stream = ExtResource("38_4uuq6")
playback_type = 1

[node name="ChaurusEgg" parent="." instance=ExtResource("3_sauvc")]
layout_mode = 1
anchor_left = 0.826389
anchor_top = 0.822531
anchor_right = 0.855903
anchor_bottom = 0.888889
texture = ExtResource("16_6p8qr")
id = 11

[node name="PickupSound" type="AudioStreamPlayer" parent="ChaurusEgg"]
stream = ExtResource("38_4uuq6")
playback_type = 1

[node name="IceWraithTeeth" parent="." instance=ExtResource("3_sauvc")]
layout_mode = 1
anchor_left = 0.78125
anchor_top = 0.830247
anchor_right = 0.811632
anchor_bottom = 0.887346
texture = ExtResource("17_g4o5r")
id = 12

[node name="PickupSound" type="AudioStreamPlayer" parent="IceWraithTeeth"]
stream = ExtResource("38_4uuq6")
playback_type = 1

[node name="LizardTail" parent="." instance=ExtResource("3_sauvc")]
layout_mode = 1
anchor_left = 0.813368
anchor_top = 0.763889
anchor_right = 0.845486
anchor_bottom = 0.817901
texture = ExtResource("18_5d0gs")
id = 13

[node name="PickupSound" type="AudioStreamPlayer" parent="LizardTail"]
stream = ExtResource("38_4uuq6")
playback_type = 1

[node name="Eyeball" parent="." instance=ExtResource("3_sauvc")]
layout_mode = 1
anchor_left = 0.809896
anchor_top = 0.680556
anchor_right = 0.828125
anchor_bottom = 0.709877
texture = ExtResource("19_3k45i")
id = 14

[node name="PickupSound" type="AudioStreamPlayer" parent="Eyeball"]
stream = ExtResource("38_4uuq6")
playback_type = 1

[node name="FairyDust" parent="." instance=ExtResource("3_sauvc")]
layout_mode = 1
anchor_left = 0.766493
anchor_top = 0.760802
anchor_right = 0.8125
anchor_bottom = 0.822531
texture = ExtResource("20_5o6mr")
id = 15

[node name="PickupSound" type="AudioStreamPlayer" parent="FairyDust"]
stream = ExtResource("38_4uuq6")
playback_type = 1

[node name="Requests" type="Node" parent="."]
script = ExtResource("9_68357")

[node name="RequestTimer" type="Timer" parent="Requests"]
wait_time = 10.0
autostart = true

[node name="Ticket1" parent="Requests" instance=ExtResource("10_np0i0")]
visible = false
anchor_left = 0.936632
anchor_top = 0.0216049
anchor_right = 0.992188
anchor_bottom = 0.175926

[node name="Ticket2" parent="Requests" instance=ExtResource("10_np0i0")]
visible = false
anchor_left = 0.940104
anchor_top = 0.364198
anchor_right = 0.99566
anchor_bottom = 0.520062

[node name="Ticket3" parent="Requests" instance=ExtResource("10_np0i0")]
visible = false
anchor_left = 0.917535
anchor_top = 0.191358
anchor_right = 0.97309
anchor_bottom = 0.356481

[node name="Ticket4" parent="Requests" instance=ExtResource("10_np0i0")]
visible = false
anchor_left = 0.921007
anchor_top = 0.518519
anchor_right = 0.976563
anchor_bottom = 0.682099

[node name="RequestSound" type="AudioStreamPlayer" parent="Requests"]
stream = ExtResource("27_q3sy3")
playback_type = 1

[node name="Book" type="Node" parent="."]
script = ExtResource("19_iuyn2")

[node name="Small" type="TextureRect" parent="Book"]
anchors_preset = -1
anchor_left = 0.0876736
anchor_top = 0.532407
anchor_right = 0.163194
anchor_bottom = 0.628086
offset_bottom = -3.05176e-05
texture = ExtResource("25_usec6")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Book/Small"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.931035
anchor_top = 0.629032
anchor_right = 1.2069
anchor_bottom = 0.967742
theme = SubResource("Theme_61pr8")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Q"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Big" type="TextureRect" parent="Book"]
visible = false
anchors_preset = -1
anchor_left = 0.0651042
anchor_top = 0.0972222
anchor_right = 0.953993
anchor_bottom = 0.96142
texture = ExtResource("26_qvk34")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Image" type="TextureRect" parent="Book/Big"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.156805
anchor_top = 0.274059
anchor_right = 0.430966
anchor_bottom = 0.738494
texture = ExtResource("25_pj2av")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Name" type="Label" parent="Book/Big"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.510848
anchor_top = 0.177824
anchor_right = 0.930966
anchor_bottom = 0.276151
offset_top = -1.52588e-05
theme = SubResource("Theme_632kg")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Sample Text"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Ingredients" type="Label" parent="Book/Big"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.516765
anchor_top = 0.370293
anchor_right = 0.92998
anchor_bottom = 0.797071
theme = SubResource("Theme_x7d70")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Ingredient 1
 Ingredient 2
 Ingredient 3"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PageLeft" type="TextureRect" parent="Book/Big"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0621302
anchor_top = 0.851465
anchor_right = 0.153846
anchor_bottom = 0.935147
offset_bottom = -3.05176e-05
texture = ExtResource("27_d562i")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Book/Big/PageLeft"]
layout_mode = 0
anchor_left = 0.204301
anchor_top = 0.199999
anchor_right = 0.548387
anchor_bottom = 0.774999
theme = SubResource("Theme_6mfrb")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "A"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PageRight" type="TextureRect" parent="Book/Big"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.860947
anchor_top = 0.799164
anchor_right = 0.952663
anchor_bottom = 0.882845
offset_bottom = 1.52588e-05
texture = ExtResource("28_vy4jb")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Book/Big/PageRight"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.451613
anchor_top = 0.225
anchor_right = 0.795699
anchor_bottom = 0.8
theme = SubResource("Theme_6mfrb")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "D"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Book/Big"]
layout_mode = 0
anchor_left = 0.0483235
anchor_top = 0.117155
anchor_right = 0.129191
anchor_bottom = 0.179916
theme = SubResource("Theme_5t6d1")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Close: Q"
metadata/_edit_use_anchors_ = true

[node name="PageTurnSound" type="AudioStreamPlayer" parent="Book"]
stream = ExtResource("31_o3iil")
playback_type = 1

[node name="FailBox" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.413194
anchor_top = 0.285494
anchor_right = 0.599826
anchor_bottom = 0.503086
texture = ExtResource("30_3k566")
expand_mode = 1
script = ExtResource("31_nik3j")
metadata/_edit_use_anchors_ = true

[node name="showTime" type="Timer" parent="FailBox"]

[node name="FartSound" type="AudioStreamPlayer" parent="FailBox"]
stream = ExtResource("32_1s3eg")
playback_type = 1

[node name="ExplodeSound" type="AudioStreamPlayer" parent="FailBox"]
stream = ExtResource("33_btie6")
playback_type = 1

[node name="AudioManager" type="Node" parent="."]

[node name="GameLoopMusic" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("32_gqr26")
autoplay = true
playback_type = 1

[node name="CauldronSound" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("34_s0hle")
volume_db = -10.0
autoplay = true
playback_type = 1

[connection signal="Fail" from="Cauldron" to="FailBox" method="_on_cauldron_fail"]
[connection signal="Potion_Brewed" from="Cauldron" to="Requests" method="_on_cauldron_potion_brewed"]
[connection signal="Potion_Brewed" from="Cauldron" to="Book" method="_on_cauldron_potion_brewed"]
[connection signal="timeout" from="Requests/RequestTimer" to="Requests" method="_on_request_timer_timeout"]
[connection signal="timeout" from="FailBox/showTime" to="FailBox" method="_on_show_time_timeout"]
